2004-11-11 Alain Magloire
	Fix for PR 75000, from PalmSource
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIVariable.java

2004-11-10 Mikhail Khodjaiants
	Fix for bug 76340: CDT hogs Windows input loop when double clicking on a breakpoint.
	* InternalDebugCoreMessages.properties
	* CBreakpointManager.java

2004-11-09 Mikhail Khodjaiants
	Fix for bug 77275: Disassembly causes Java exception for fn's with 0 bytes fn prologues.
	* DisassemblyBlock.java

2004-11-09 Mikhail Khodjaiants
	Partial fix for bug 41725: I can't set a breakpoint in a function where I used attach source.
	* CBreakpointManager.java

2004-11-09 Alain Magloire
	Put possiblity to set Exception breakpoint
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIBreakpointManagement.java

2004-11-08 Alain Magloire
	Bug in CVariableFactory for globals, the filename of the 
	binary was use instead of the filename of the symbol.
	* src/org/eclipse/cdt/debug/internal/core/model/CVariableFactory.java

2004-11-08 Alain Magloire
	New class ICDIFunctionFinished.
	It return the return value of the function.
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIFunctionFinished.java

2004-11-04 Mikhail Khodjaiants
	Removed "Refresh" and "Auto-Refresh" actions support for shared libraries.
	* ICDebugConstants.java
	* ICSharedLibraryManager.java
	* CSharedLibraryManager.java
	* ICUpdateManager.java: removed
	* CUpdateManager.java: removed

2004-11-04 Mikhail Khodjaiants
	Removed "Refresh" and "Auto-Refresh" actions support for registers.
	* ICDebugConstants.java
	* ICRegisterManager.java
	* CRegisterManager.java

2004-11-04 Mikhail Khodjaiants
	No need of "ICSignalManager".
	* ICSignalManager.java: removed
	* CSignalManager.java
	* CDebugTarget.java

2004-11-04 Mikhail Khodjaiants
	CSignalManager no longer extends CUpdateManager.
	* CSignalManager.java
 
2004-11-03 Mikhail Khodjaiants
	New implementation of expressions. 
	Large arrays partitioning based on the framework model.
	* CoreModelMessages.properties
	* AbstractCValue.java